[package]
name = "chaos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "echo"
path = "examples/echo.rs"

[[example]]
name = "unique-ids"
path = "examples/unique-ids.rs"

[[example]]
name = "broadcast"
path = "examples/broadcast.rs"


[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
